add overlapArea metric